syntax = "proto3";

package proto;

import "google/protobuf/empty.proto";
import "google/protobuf/timestamp.proto";

option go_package = "./pb";

service CategoryTodoService {
  rpc FindAll (google.protobuf.Empty) returns (ListCategoryTodoResponse) {}
  rpc FindByID (GetCategoryTodoByIDRequest) returns (GetCategoryTodoResponse) {}
  rpc Create (CreateCategoryTodoRequest) returns (GetCategoryTodoResponse) {}
  rpc Delete (GetCategoryTodoByIDRequest) returns (google.protobuf.Empty) {}
}

message CategoryTodo {
  int64 id = 1;
  string name = 2;
  google.protobuf.Timestamp created_at = 3;
  google.protobuf.Timestamp updated_at = 4;
}

message ListCategoryTodoResponse {
  repeated CategoryTodo category_todos = 1;
}

message GetCategoryTodoResponse {
  CategoryTodo category_todo = 1;
}

message GetCategoryTodoByIDRequest {
  int64 id = 1;
}

message CreateCategoryTodoRequest {
  string name = 1;
}
